<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dados_do_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_main"
    tools:context=".dadosdocliente.view.FragmentDadosDoCliente">


    <TextView
        android:id="@+id/fragment_dados_do_cliente_text_loading"
        style="@style/StyleTextSecundarioDaFragmentAlvara"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_loading__carregando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_passenger"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_dados_do_cliente__view_dados_do_cliente"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/fundo_cards"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_dados_do_cliente"
                style="@style/StyleTextPrincipalDaFragmentDadosDoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:text="@string/fragment_dados_do_cliente__dados_do_cliente"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toTopOf="@+id/fragment_dados_do_cliente__view_dados_do_cliente" />

            <View
                android:id="@+id/fragment_dados_do_cliente__view_divisora"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:background="#CDD3D5"
                android:elevation="3dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_dados_do_cliente" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_razao_social"
                style="@style/StyleTextNomeDaFragmentDadosDoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:elevation="3dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__view_divisora" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_nome_fantasia"
                style="@style/StyleTextNomeEmpresaDaFragmentDadosDoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:elevation="3dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_razao_social" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_label_cpf"
                style="@style/StyleTextLabelDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:elevation="3dp"
                android:text="@string/fragment_dados_do_cliente__cpf"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/fragment_dados_do_cliente__text_cpf"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_nome_fantasia" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_cpf"
                style="@style/StyleTextValoresDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:elevation="3dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/fragment_dados_do_cliente__text_label_cpf"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_nome_fantasia" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_label_cnpj"
                style="@style/StyleTextLabelDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:text="@string/fragment_dados_do_cliente__cnpj"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/fragment_dados_do_cliente__text_cnpj"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_label_cpf" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_cnpj"
                style="@style/StyleTextValoresDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/fragment_dados_do_cliente__text_label_cnpj"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_cpf" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_label_ramo_de_atividade"
                style="@style/StyleTextLabelDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:text="@string/fragment_dados_do_cliente__ramo_de_atividade"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/fragment_dados_do_cliente__text_ramo_de_atividade"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_label_cnpj" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_ramo_de_atividade"
                style="@style/StyleTextValoresDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/fragment_dados_do_cliente__text_label_ramo_de_atividade"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_cnpj" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_label_enderecos"
                style="@style/StyleTextLabelDaFragmentDadosDoCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:text="@string/fragment_dados_do_cliente__enderecos"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/fragment_dados_do_cliente__text_enderecos"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_label_ramo_de_atividade" />


            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_enderecos"
                style="@style/StyleTextValoresDaFragmentDadosDoCliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:elevation="3dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_dados_do_cliente"
                app:layout_constraintStart_toEndOf="@+id/fragment_dados_do_cliente__text_label_enderecos"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_ramo_de_atividade" />


            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_dados_do_cliente__view_contatos"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/fundo_cards"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_dados_do_cliente__view_dados_do_cliente" />

            <TextView
                android:id="@+id/fragment_dados_do_cliente__text_contatos"
                style="@style/StyleTextPrincipalDaFragmentDadosDoCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:text="@string/fragment_dados_do_cliente__contatos"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintTop_toTopOf="@+id/fragment_dados_do_cliente__view_contatos" />

            <View
                android:id="@+id/fragment_dados_do_cliente__view_divisora_contatos"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="#CDD3D5"
                android:elevation="3dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__text_contatos" />

            <LinearLayout
                android:id="@+id/fragment_dados_do_cliente__linear_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:elevation="2dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintEnd_toEndOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintStart_toStartOf="@id/fragment_dados_do_cliente__view_contatos"
                app:layout_constraintTop_toBottomOf="@+id/fragment_dados_do_cliente__view_divisora_contatos">

                <ListView
                    android:id="@+id/fragment_dados_do_cliente__lista_de_contatos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:divider="@color/colorAccent"
                    android:dividerHeight="0dp"
                    android:elevation="2dp"
                    android:visibility="visible">

                </ListView>

            </LinearLayout>

            <Button
                android:id="@+id/fragment_dados_do_cliente__botao_verifica_status_do_cliente"
                style="@style/StyleBotaoVerificarStatusDoCliente"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/fragment_dados_do_cliente__verificar_status_do_cliente"
                android:visibility="gone"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_dados_do_cliente__view_contatos" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>